# applaucher

./: .gitignore  LICENSE  README.md  app_launcher.py  app_launcher_old.py  app_settings.json  build.py  launcher_logic.py  main.py  make_icon.py  pyproject.toml  readme.txt  requirements-dev.txt  requirements.txt  resources_rc.py
core/: app_settings.py  exe_builder.py  launcher_logic.py  storage.py  utils.py
resources/: resources.qrc
ui/: icon_loader.py  main_window.py  theme_manager.py
ui/dialogs/: launch_editor.py  settings_dialog.py
ui/main_window/: actions.py  launch_worker.py  main_window.py  tray_manager.py
ui/widgets/: draggable_list.py  path_row.py  style_helpers.py  themed_combobox.py  title_bar.py  toggle_switch.py
