[project]
name = "app-launcher"
version = "1.0.0"
description = "A lightweight PyQt6-based multi-app launcher with async execution and theme persistence."
readme = "readme.txt"
requires-python = ">=3.10"
authors = [
  { name = "Lobbyx3" }
]
license = { text = "MIT" }

dependencies = [
  "PyQt6>=6.7.0",
  "psutil>=5.9.0",
  "pillow>=10.0.0",
  "pywin32>=306; platform_system == 'Windows'"
]

[project.scripts]
app-launcher = "app_launcher:main"

[tool.pyinstaller]
# Helps PyInstaller detect non-code resources
add-data = [
  "AppLauncher.ico;.",
  "resources/icons;resources/icons"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
